--- a/production-firebase.env.json
+++ b/production-firebase.env.json
@@ -1,9 +1,9 @@
 {
   "applicationName": "custom-objects",
-  "frontendHost": "mc.commercetools.co",
+  "frontendHost": "mc.us-central1.gcp.commercetools.com",
   "mcApiUrl": "https://mc-api.commercetools.co",
   "location": "us",
   "env": "production",
-  "cdnUrl": "",
+  "cdnUrl": "https://custom-objects.firebaseapp.com",
   "servedByProxy": true
 }
