--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:css": "jest --config jest.stylelint.config.js",
     "format": "prettier --write '**/*.{js,css,gql,graphql,json}'",
     "format:js": "prettier --write '**/*.js'",
-    "format:graphql": "prettier --write '**/*.{gql|graphql}'",
+    "format:graphql": "prettier --write '**/*.{gql,graphql}'",
     "format:css": "prettier --write '**/*.css'",
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch",
@@ -70,6 +70,7 @@
     "moment": "2.27.0",
     "moment-timezone": "0.5.31",
     "prop-types": "15.7.2",
+    "qs": "6.9.4",
     "react": "16.13.1",
     "react-apollo": "3.1.5",
     "react-dom": "16.13.1",
