--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@commercetools-uikit/messages": "10.24.0",
     "@commercetools-uikit/spacings": "10.18.5",
     "@commercetools-uikit/text": "10.24.0",
+    "@commercetools-uikit/tooltip": "10.23.0",
     "@types/prop-types": "^15.7.3",
     "@types/react": "16.9.43",
     "@types/react-dom": "^16.9.8",
