--- a/package.json
+++ b/package.json
@@ -26,39 +26,40 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
-    "@commercetools-frontend/actions-global": "16.15.2",
-    "@commercetools-frontend/application-components": "16.15.2",
-    "@commercetools-frontend/application-shell": "16.15.2",
-    "@commercetools-frontend/application-shell-connectors": "16.15.2",
-    "@commercetools-frontend/assets": "16.9.1",
-    "@commercetools-frontend/constants": "16.15.2",
-    "@commercetools-frontend/i18n": "16.15.2",
-    "@commercetools-frontend/l10n": "16.15.2",
-    "@commercetools-frontend/mc-http-server": "16.15.2",
-    "@commercetools-frontend/permissions": "16.15.2",
-    "@commercetools-frontend/sdk": "16.15.2",
-    "@commercetools-uikit/buttons": "10.24.0",
-    "@commercetools-uikit/card": "10.21.0",
-    "@commercetools-uikit/collapsible-panel": "10.24.0",
-    "@commercetools-uikit/constraints": "10.21.0",
+    "@commercetools-frontend/actions-global": "16.16.0",
+    "@commercetools-frontend/application-components": "16.16.2",
+    "@commercetools-frontend/application-shell": "16.16.2",
+    "@commercetools-frontend/application-shell-connectors": "16.16.1",
+    "@commercetools-frontend/assets": "16.15.3",
+    "@commercetools-frontend/constants": "16.16.0",
+    "@commercetools-frontend/i18n": "16.16.2",
+    "@commercetools-frontend/l10n": "16.16.1",
+    "@commercetools-frontend/mc-http-server": "16.16.1",
+    "@commercetools-frontend/permissions": "16.16.1",
+    "@commercetools-frontend/sdk": "16.16.1",
+    "@commercetools-frontend/ui-kit": "10.31.0",
+    "@commercetools-uikit/buttons": "10.30.1",
+    "@commercetools-uikit/card": "10.30.2",
+    "@commercetools-uikit/collapsible-panel": "10.30.1",
+    "@commercetools-uikit/constraints": "10.30.1",
     "@commercetools-uikit/design-system": "10.18.4",
-    "@commercetools-uikit/field-label": "10.24.0",
-    "@commercetools-uikit/fields": "10.25.0",
-    "@commercetools-uikit/grid": "10.18.4",
-    "@commercetools-uikit/i18n": "10.13.0",
-    "@commercetools-uikit/icons": "10.24.0",
-    "@commercetools-uikit/inputs": "10.24.0",
-    "@commercetools-uikit/messages": "10.24.0",
-    "@commercetools-uikit/spacings": "10.18.5",
-    "@commercetools-uikit/text": "10.24.0",
-    "@commercetools-uikit/tooltip": "10.23.0",
+    "@commercetools-uikit/field-label": "10.30.1",
+    "@commercetools-uikit/fields": "10.31.0",
+    "@commercetools-uikit/grid": "10.30.1",
+    "@commercetools-uikit/i18n": "10.30.1",
+    "@commercetools-uikit/icons": "10.30.1",
+    "@commercetools-uikit/inputs": "10.31.0",
+    "@commercetools-uikit/messages": "10.30.1",
+    "@commercetools-uikit/spacings": "10.18.7",
+    "@commercetools-uikit/text": "10.30.1",
+    "@commercetools-uikit/tooltip": "10.30.1",
     "@commercetools-us-ps/mc-app-core": "1.1.24",
-    "@types/prop-types": "^15.7.3",
+    "@types/prop-types": "15.7.3",
     "@types/react": "16.9.43",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router": "5.1.7",
+    "@types/react-router-dom": "5.1.5",
     "apollo-cache": "1.3.5",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
@@ -68,7 +69,8 @@
     "formik": "2.1.5",
     "global": "4.4.0",
     "graphql": "14.7.0",
-    "lodash": "4.17.15",
+    "graphql-anywhere": "4.2.7",
+    "lodash": "4.17.20",
     "moment": "2.27.0",
     "moment-timezone": "0.5.31",
     "prop-types": "15.7.2",
@@ -76,7 +78,7 @@
     "react": "16.13.1",
     "react-apollo": "3.1.5",
     "react-dom": "16.13.1",
-    "react-intl": "4.7.6",
+    "react-intl": "5.7.1",
     "react-redux": "7.2.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
