--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.3",
   "description": "",
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
+    }
+  },
   "scripts": {
     "build": "mc-scripts build",
     "start": "mc-scripts start",
     "start:prod:local": "NODE_ENV=production mc-http-server --config=$(pwd)/env.json --use-local-assets",
     "compile-html:aws": "mc-scripts compile-html --headers=$(pwd)/production-aws.headers.json --config=$(pwd)/production-aws.env.json --use-local-assets --transformer $(pwd)/config/transformer-aws.js",
     "compile-html:firebase": "cross-env FIREBASE_TARGET=custom-objects mc-scripts compile-html --headers=$(pwd)/production-firebase.headers.json --config=$(pwd)/production-firebase.env.json --use-local-assets --transformer $(pwd)/config/transformer-firebase.js",
-    "precommit": "lint-staged",
     "i18n:build": "mc-scripts extract-intl --output-path=$(pwd)/src/i18n/data '{src,../core}/**/!(*.spec).js' --build-translations",
     "lint": "jest --projects jest.eslint.config.js jest.eslint-graphql.config.js jest.stylelint.config.js",
     "lint:js": "jest --config jest.eslint.config.js",
@@ -90,6 +95,8 @@
     "@commercetools-frontend/eslint-config-mc-app": "16.11.1",
     "@commercetools-frontend/jest-preset-mc-app": "16.15.2",
     "@commercetools-frontend/mc-scripts": "16.15.2",
+    "@commitlint/cli": "9.1.2",
+    "@commitlint/config-conventional": "9.1.2",
     "@testing-library/react": "10.4.7",
     "apollo-cache-inmemory": "1.6.6",
     "babel-eslint": "10.1.0",
@@ -111,6 +118,7 @@
     "eslint-plugin-react-hooks": "4.0.8",
     "faker": "4.1.0",
     "graphql-tag": "2.10.4",
+    "husky": "4.2.5",
     "jest": "26.1.0",
     "jest-plugin-filename": "0.0.1",
     "jest-runner-eslint": "0.10.0",
