--- a/renovate.json
+++ b/renovate.json
@@ -1,15 +1,9 @@
 {
-  "extends": [
-    "config:base",
-    ":pinOnlyDevDependencies",
-    "schedule:weekly"
-  ],
+  "extends": ["config:base", ":pinOnlyDevDependencies", "schedule:weekly"],
   "separateMajorMinor": true,
   "packageRules": [
     {
-      "packagePatterns": [
-        "*"
-      ],
+      "packagePatterns": ["*"],
       "updateTypes": ["minor", "patch"],
       "groupName": "all dependencies",
       "groupSlug": "all"
